refactor(core): 优化代码质量和性能
- 将 StringBuilder 的长度检查从 length() > 0 替换为 isEmpty()
- 使用 getFirst() 和 getLast() 替代 get(0) 和 get(size()-1)
- 移除不必要的 null 检查和简化条件逻辑
- 优化循环中的条件判断和对象创建
- 更新正则表达式模式以提高匹配效率
- 改进集合操作的性能表现
- 简化布尔表达式的返回逻辑
- 添加适当的注解支持
- 修复潜在的空指针异常风险
- 优化历史记录栈的操作方法