@@ -29,8 +29,8 @@ public final class CurvePathSamplingUtil {
             }
             return toVector3dList(pts);
         }
-        if (polyObj instanceof PolylineData poly) {
-            return toVector3dList(poly.points());
+        if (polyObj instanceof PolylineData(List<Vec3d> points)) {
+            return toVector3dList(points);
         }
         if (lineObj instanceof LineData line) {
             Vec3d a = line.getStart();
@@ -44,8 +44,8 @@ public final class CurvePathSamplingUtil {
         if (verts.size() < 3) {
             return false;
         }
-        Vector3d first = verts.get(0);
-        Vector3d last = verts.get(verts.size() - 1);
+        Vector3d first = verts.getFirst();
+        Vector3d last = verts.getLast();
         return first.distance(last) < 1.0e-6d;
     }
 
@@ -85,7 +85,7 @@ public final class CurvePathSamplingUtil {
                 return new Vector3d(p0).lerp(p1, t);
             }
         }
-        return new Vector3d(unique.get(0));
+        return new Vector3d(unique.getFirst());
     }
 
     public static List<Vec3d> toVec3dList(List<Vector3d> points, boolean closed) {
@@ -94,7 +94,7 @@ public final class CurvePathSamplingUtil {
             out.add(new Vec3d(point.x, point.y, point.z));
         }
         if (closed && !out.isEmpty()) {
-            out.add(out.get(0));
+            out.add(out.getFirst());
         }
         return out;
     }
